src/objects/P360_Pulse__c.object
<CustomObject>
    <description>P360 - This custom object will be used to store all the pulses corresponding to a Project or an Intake. This object has lookup relationships with Project and Intake objects.</description>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <description>Project Pulse Accomplishments</description>
        <inlineHelpText>Please enter individual Accomplishments on a separate line</inlineHelpText>
        <label>Accomplishments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <defaultValue>&quot;If you create this pulse now, it will update the details immediately. As a friendly reminder, only create a pulse if you are ready to provide an update right now.&quot;</defaultValue>
        <label>Help</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <description>Project Pulse Issues</description>
        <inlineHelpText>Please enter individual Issues on a separate line</inlineHelpText>
        <label>Issues</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <description>A pulse will be private if the parent project is private</description>
        <formula>ProjectName__r.Private__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines whether or not the project is Private</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose the Project for which you&apos;re providing this pulse</inlineHelpText>
        <label>Project Name</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipName>Project_Pulses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Name</label>
        <referenceTo>P360_Request__c</referenceTo>
        <relationshipLabel>Pulses</relationshipLabel>
        <relationshipName>Pulses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusUpdateOrComments__c</fullName>
        <inlineHelpText>Please enter comments for this pulse</inlineHelpText>
        <label>Status Update/Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UpcomingActionItems__c</fullName>
        <description>Project Pulse Upcoming Action Items</description>
        <inlineHelpText>Please enter individual Action Items on a separate line</inlineHelpText>
        <label>Upcoming Action Items</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Pulse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ProjectName__c</columns>
        <columns>RequestName__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{YYYY}{MM}-{0000}</displayFormat>
        <label>Pulse</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pulses</pluralLabel>
    <recordTypes>
        <fullName>ProjectPulse</fullName>
        <active>true</active>
        <description>P360 - Create a pulse record for a Project</description>
        <label>Project Pulse</label>
    </recordTypes>
    <recordTypes>
        <fullName>RequestPulse</fullName>
        <active>true</active>
        <description>P360 - Create a pulse record for a Request</description>
        <label>Request Pulse</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>